# BBM

./: .gitignore  AlgoCreationBiereDEBUT  Algo_creation_dune_biere.txt  CMakeLists.txt  EvenementAleatoireIdee  TODO_Nico  beerbuilder.cpp  beerbuilder.h
BBM/: BBM.pro  BBM.pro.user.169d8f0.22  Type.h  bar.cpp  bar.h  beer.cpp  beer.h  game.cpp  game.h  ingredient.cpp  ingredient.h  main.cpp  recipe.cpp  recipe.h
BBM/APM/: drink.cpp
BBM/beerbuilder/: beerbuilder.cpp
NoteBook/: Button_editor.qml  Detail_editor.qml  Detail_home.qml  Master.qml  NotebookBiere.pro  NotebookBiere_en_150.ts  beer.cpp  biere.cpp  biere.h  bieremodel.cpp  bieremodel.h  buttonmanager.cpp  buttonmanager.h  ingredient.cpp  main.cpp  main.qml  modelBeer.cpp  qml.qrc  recipe.cpp  recipe.h  untitledScrollMaster.pro  untitledScrollMaster.pro.user.28207a7  untitledScrollMaster.pro.user.472c3d0  untitledScrollMaster.pro.user.8bf9b1e
build-BBM-Desktop_x86_windows_msvc2019_pe_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
documentation/: .~lock.Cdcf-Comment.odt#  CdC.docx  Cdcf-Comment.odt  Diagamme_de_classe.mdj  Evenementç_aleatoire.txt  Event.docx  Liste Event.docx  WBS_BBM.docx  event.mdj  scenario.docx
le-joli-jeu/: gameGui.qml  gameLoader.qml  gameMenu.qml  le-joli-jeu.pro  le-joli-jeu_fr_FR.ts  main.cpp  main.qml  mainGame.cpp  qml.qrc
qml/: qml.qrc
src/: BBM  BBM.cpp  BBM.pro  BBM.vcxproj  BBM.vcxproj.filters  Beer.cpp  Beer.h  Ingredient.cpp  Ingredient.h  Makefile  Recipe.cpp  Recipe.h  main.cpp  moc_beer.cpp  moc_recipe.cpp  qrc_qml.cpp  stub.cpp  stub.h
(+151 files in other folders)
